--- a/src/styles.scss
+++ b/src/styles.scss
@@ -53,3 +53,9 @@ body {
 .pointer {
   cursor: pointer;
 }
+html,
+body {
+  margin: 0;
+  height: 100%;
+  overflow: hidden;
+}
